--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 beautifulsoup4==4.9.0
 certifi==2020.4.5.1
 chardet==3.0.4
+configparser==5.0.0
 idna==2.9
 lxml==4.5.0
+mysql-connector-python==8.0.20
+protobuf==3.12.0
+PyMySQL==0.9.3
 requests==2.23.0
+six==1.14.0
 soupsieve==2.0
 stockquotes==2.0.0
 urllib3==1.25.9
